--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "node workshop 1",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/SchoolOfCode/node-101-workshop-mariano-conor/issues"
   },
-  "homepage": "https://github.com/SchoolOfCode/node-101-workshop-mariano-conor#readme"
+  "homepage": "https://github.com/SchoolOfCode/node-101-workshop-mariano-conor#readme",
+  "dependencies": {
+    "chalk": "^5.0.0"
+  }
 }
